--- a/about.html
+++ b/about.html
@@ -85,21 +85,10 @@
         <div class="container py-3 py-md-6">
             <div class="d-lg-flex mt-2">
                     <div class="col-12 col-lg-6 pr-md-4">
-                        <h2 class="mt-6 mb-3 h4 font-weight-700"><p>Bio</p></h2>
-                        <p>I'm a 24 year old carioca developer based in São Paulo. I've been working in the Site Reliability Engineering/DevOps field for two years and I'm searching for my next thing in the Embedded Software/Hardware field. I've been through some projects and companies, such as Red Hat, Valve (as a volunteer) and PagSeguro. I graduated as a Technologist in Phonographic Production at UNESA, I am working on an online Specialization in Embedded Sensors and Motors at the University of Colorado Boulder and plan on getting a Masters in the future.</p>
-                        <p>Always have time for a new open source project and love to build things that involve software and hardware and show them at technology conventions. I also like to study new things, practice 3d modelling, play video games, cosplay, pc modding and the like.</p>
+                        <h2 class="mt-6 mb-3 h4 font-weight-700"><p>Bio</p></h2><p>I'm a 25 year old carioca developer based in São Paulo. I'm working as a SRE at Gympass. I graduated as a Sound Engineer at UNESA and am pursuing a Masters in Electrical Engineering at FEI, in the Image and Signal Processing field.</p>
+                        <p>At the moment, my hobbies are singing, dancing, 3d modeling and painting watercolors. Also changing my room layout on a weekly basis. And ocasionally going for some ice cream in my neighborhood.</p>
+                        <p>Please note that these may change at any given moment.</p>
                         <p class="p-sm"></p>
-                        <h2 class="mt-6 mb-3 h4 font-weight-700"><p>Some technologies I often use, but do not restrict myself to</p></h2>
-                        <ul>
-                            <li>Linux</li>
-                            <li>C/C++</li>
-                            <li>Python</li>
-                            <li>Shell</li>
-                            <li>Ruby</li>
-                            <li>Kubernetes</li>
-                            <li>AWS</li>
-                            <li>Google Cloud Platform</li>
-                        </ul>
                         <p class="p-sm"></p>
                         <h2 class="mt-6 mb-3 h4 font-weight-700"><p>Curriculum</p></h2>
                         <p>You can see and download my curriculum at trampos.co/robbie</p>
