--- a/contact.html
+++ b/contact.html
@@ -98,7 +98,7 @@
             <div class="d-lg-flex mt-2">
                 <div class="col-12 col-lg-6 pr-md-4">
                     <h2 class="mt-6 mb-3 h4 font-weight-700">Github</h2>
-                    <p class="p-sm">github.com/doctorhalsey</p>
+                    <p class="p-sm">github.com/robertafps</p>
                 </div>
 
                 <div class="col-12 col-lg-6 pl-md-4">
